@@ -1,14 +1,14 @@
 ANSIColor.pm
 Changes
-examples/ex1.pl
-examples/ex2.pl
-examples/ex3.pl
-examples/ex4.pl
-examples/ex5.pl
-examples/ex6.pl
-examples/ex7.pl
-examples/ex8.pl
-examples/ex9.pl
+examples/err_bt_pretty.pl
+examples/err_bt_pretty_eval.pl
+examples/err_bt_pretty_rev_eval.pl
+examples/err_die.pl
+examples/err_line.pl
+examples/err_line_all.pl
+examples/err_print_class.pl
+examples/err_print_main.pl
+examples/err_print_var.pl
 inc/Module/Install.pm
 inc/Module/Install/AuthorRequires.pm
 inc/Module/Install/AuthorTests.pm
